--- a/Project 5/Project 5.vcxproj.filters
+++ b/Project 5/Project 5.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="d_matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="heapV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
